--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=18.0.0"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -18,32 +16,19 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "cookie-parser": "^1.4.6",
-    "multer": "^1.4.5",
+    "multer": "^1.4.4",
     "cloudinary": "^1.40.0",
     "cors": "^2.8.5",
     "socket.io": "^4.7.2",
     "dotenv": "^16.3.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
   },
   "keywords": [
     "auction",
     "collectibles",
     "nodejs",
     "express",
-    "mongodb",
-    "socket.io",
-    "real-time"
+    "mongodb"
   ],
   "author": "VG Vault Team",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/yourusername/vg-vault.git"
-  },
-  "bugs": {
-    "url": "https://github.com/yourusername/vg-vault/issues"
-  },
-  "homepage": "https://github.com/yourusername/vg-vault#readme"
+  "license": "MIT"
 }
